# lgr-django

./: .gitignore  Changelog.md  Installation_Guide.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  Release_Notes.md  manage.py  pyproject.toml  runtests.sh  setup.py
containers/lgr-base/: Dockerfile  lgr-base.sh
containers/lgr-celery/: Dockerfile  celeryInit.sh
containers/lgr-django/: Dockerfile
containers/lgr-django/files/: local.py  requirements.txt  test.py
containers/lgr-gunicorn/: Dockerfile  gunicornInit.sh
containers/lgr-redis/: Dockerfile  lgr-redis.sh
containers/lgr-static/: Dockerfile  lgr-static.conf  lgr-static.conf.template  staticInit.sh
dev/: README.md  docker-compose.yml  dockerbuild.sh
dev/lgr-base/: Dockerfile  lgr-base.sh
dev/lgr-celery/: Dockerfile  celeryInit.sh
dev/lgr-django/: Dockerfile
dev/lgr-django/files/: local.py  manage.py  requirements.txt
dev/lgr-gunicorn/: Dockerfile  gunicornInit.sh
dev/lgr-static/: Dockerfile  lgr-static.conf  staticInit.sh
doc/: Makefile  conf.py  index.rst
docker/: Dockerfile  start.sh
etc/: requirements.in  requirements.txt
etc/nginx/: lgr-django.conf
etc/systemd/: lgr-celery-beat.service  lgr-celery.service  lgr-django.conf  lgr-django.service
helm/: README.md  lgr-0.1.0.tgz
helm/lgr/: Chart.yaml  values.yaml
helm/lgr/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  route.yaml  service.yaml  static-route.yaml
helm/preinstall/: secret.yaml
helm/preinstall/ServiceAccount/: qa.yaml
helm/secrets/: lgrsecrets-sealed-prod.yaml  lgrsecrets-sealed-qa.yaml
helm/values/: values-prod-dc.yaml  values-prod-lax.yaml  values-qa.yaml
kubernetes/: .gitignore  Dockerfile  Makefile  README.md  apache-lgrtool.conf  k8s-ingress.yaml  k8s-lgrtool.yaml  supervisord.conf
kubernetes/site-specific/: template-local.py
src/lgr_advanced/: api.py  apps.py  forms.py  lgr_exceptions.py  models.py  urls.py  utils.py  views.py  widgets.py
src/lgr_advanced/lgr_editor/: api.py  repertoires.py  unidb.py  urls.py  utils.py  views.py
src/lgr_advanced/lgr_renderer/: api.py  converters.py  urls.py  utils.py  views.py
src/lgr_advanced/lgr_tools/: __init__.py  api.py  forms.py  middleware.py  models.py  tasks.py  urls.py  views.py
src/lgr_advanced/lgr_validator/: api.py  forms.py  urls.py  views.py
src/lgr_advanced/migrations/: 0001_initial.py  (+2 more)
src/lgr_auth/: apps.py  backend.py  forms.py  models.py  urls.py  validators.py  views.py
src/lgr_basic/: forms.py  urls.py  views.py
src/lgr_business/: unicode_versions.py
src/lgr_django.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lgr_editor/: api.py  exceptions.py  lgr_exceptions.py  repertoires.py  unidb.py  urls.py  utils.py  views.py
src/lgr_idn_table_review/: api.py  forms.py  urls.py  views.py
src/lgr_manage/: api.py  apps.py  forms.py  models.py  urls.py
src/lgr_models/: apps.py  exceptions.py  models.py  signals.py  storage.py  utils.py
src/lgr_renderer/: api.py  apps.py  urls.py  utils.py  views.py
src/lgr_session/: api.py  apps.py  urls.py  views.py
src/lgr_tasks/: api.py  apps.py  models.py  tasks.py  urls.py  views.py
src/lgr_tools/: __init__.py  api.py  celery_app.py  forms.py  middleware.py  tasks.py  urls.py  views.py
src/lgr_utils/: apps.py  components.py  converters.py  cp.py  forms.py  unidb.py  urls.py  utils.py  views.py
src/lgr_validator/: api.py  forms.py  urls.py  views.py
src/lgr_web/: __init__.py  celery_app.py  config.py  converters.py  forms.py  urls.py  utils.py  views.py  wsgi.py
src/tests/: lgr_webclient_test_base.py
(+672 files in other folders)
